# cuda_picture_convert

./: .gitignore  CMakeLists.txt  README.md  cuda_test  main.cu  requirements.txt  statistics.py
device/: DeviceInfo.cu  DeviceInfo.cuh  DeviceKernel.cu  DeviceKernel.cuh
helper/: GpuPowerMonitor.cu  GpuPowerMonitor.cuh  GpuPowerMonitorThread.cu  GpuPowerMonitorThread.cuh  HelperFunctions.cu  HelperFunctions.cuh
host/: HostSystem.cu  HostSystem.cuh
image-processing/: ImageProcessor.cu  ImageProcessor.cuh  ImageProcessorHelper.cu  ImageProcessorHelper.cuh  ProcessingInfo.cu  ProcessingInfo.cuh
open_cv/: OpenCVFunctions.cpp  OpenCVFunctions.h
summaries/: combindend_stats.py  statistics_plots.py
